clean up for ios

--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,8 @@ settings.json
 *_old
 */*/local_settings.pychef_files/data_bag_key
 celery*.db
-
-
-
+platforms/*
+plugins/*
+merges/*
 
 deploy.sh
